[gd_scene load_steps=8 format=3 uid="uid://caysarg36l3s4"]

[ext_resource type="Script" path="res://scenes/MainMenutscn.gd" id="1_ecifi"]
[ext_resource type="AudioStream" uid="uid://bdojhrvgmt3ar" path="res://data/sfx/blipSelect(2).wav" id="2_gxt6u"]
[ext_resource type="Texture2D" uid="uid://dbjgico7r7uf6" path="res://data/Fence.png" id="2_uuawg"]
[ext_resource type="Script" path="res://addons/action_list/ActionList.gd" id="3_1vajy"]
[ext_resource type="AudioStream" uid="uid://dccx07csdwd8x" path="res://data/sfx/synth(6).wav" id="3_qdfqh"]
[ext_resource type="AudioStream" uid="uid://dk6bi6q7p85g2" path="res://data/sfx/blipSelect.wav" id="6_dt3su"]

[sub_resource type="GDScript" id="GDScript_1qo5p"]
script/source = "extends Control

"

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ecifi")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1912.0
offset_bottom = 1080.0
color = Color(0.0156863, 0.0156863, 0.0156863, 1)

[node name="Fence" type="Sprite2D" parent="."]
position = Vector2(960, 432)
scale = Vector2(1.32976, 1.32976)
texture = ExtResource("2_uuawg")

[node name="Main" type="Control" parent="."]
unique_name_in_owner = true
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MainList" type="VBoxContainer" parent="Main"]
unique_name_in_owner = true
layout_mode = 0
offset_top = 520.0
offset_right = 1920.0
offset_bottom = 1080.0
alignment = 1
script = ExtResource("3_1vajy")
sound_effect_move = ExtResource("3_qdfqh")
sound_effect_pressed = ExtResource("2_gxt6u")
list_export = Array[String](["New Game", "Load Game", "Editor", "Settings", "Quit"])

[node name="Settings" type="Control" parent="."]
unique_name_in_owner = true
process_mode = 1
visible = false
anchors_preset = 0
offset_left = 256.0
offset_top = 8.0
offset_right = 960.0
offset_bottom = 1088.0
script = SubResource("GDScript_1qo5p")

[node name="ColorRect2" type="ColorRect" parent="Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -112.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0352941, 0.0352941, 0.0352941, 1)

[node name="SettingsList" type="VBoxContainer" parent="Settings"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = -0.091
anchor_top = 0.119
anchor_right = 0.443
anchor_bottom = 1.0
offset_left = 72.064
offset_top = -128.52
offset_right = 80.128
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
script = ExtResource("3_1vajy")
sound_effect_move = ExtResource("6_dt3su")
sound_effect_pressed = ExtResource("3_qdfqh")
list_export = Array[String](["Return", "Volume  !", "Penis Size !"])

[node name="setting_volume" type="Label" parent="Settings"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[connection signal="selected_index" from="Main/MainList" to="." method="_on_main_list_selected_index"]
[connection signal="selected_index" from="Settings/SettingsList" to="." method="_on_settings_list_selected_index"]
